--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "odin-recipes"]
 	path = odin-recipes
 	url = git@github.com:waris-sri/odin-recipes.git
+[submodule "css-exercises"]
+	path = css-exercises
+	url = /Users/warissripatoomrak/Documents/GitHub/the-odin-project-main/css-exercises
