feat: add javascript-exercises as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "odin-landing-page"]
 	path = odin-landing-page
 	url = git@github.com:waris-sri/odin-landing-page.git
+[submodule "javascript-exercises"]
+	path = javascript-exercises
+	url = git@github.com:waris-sri/javascript-exercises.git
